Título da página do index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Git - Controle e compartilhe seu código</title>
   </head>
   <body>
-
+  <h1>Projeto Bruno F. Alves</h1>
   </body>
 </html>
