--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Git - Controle e compartilhe seu código</title>
+    <title>Git - Controle e compartilhe seu código sasojnbhdasbhdasbhdsabhdsai</title>
   </head>
   <body>
   <h1>Projeto Bruno F. Alves</h1>
